<resources>
    <string name="app_name">Country Quiz</string>
    <string name="beginning" translatable="false">Welcome to the Country Quiz!</string>
    <string name="start_text">Start</string>
    <string name="back_text">Back</string>
    <string name="continue_text">Continue</string>
    <string name="selection_text">Choose a Quiz</string>
    <string name="us_states_quiz">Name all 50 US states</string>
    <string name="rus_subjects_quiz">Name all 83 subjects of Russia</string>
    <string name="check_btn">Check</string>
    <string name="text_hint">Enter the subject name</string>
    <string name="text_hint1">Enter the country name</string>
    <string name="github_button" translatable="false">GitHub</string>
    <string name="tg_button" translatable="false">Telegram</string>
    <string name="toast_back_press">Press back again to exit</string>
    <string name="toast_correct">Correct</string>
    <string name="toast_already_guessed">Already Guessed!</string>
    <string name="toast_incorrect">Incorrect</string>
    <string name="toast_win">Congratulations!</string>
    <string name="toast_svg_error">Map loading error</string>
    <string name="amoled_text">AMOLED Mode</string>
    <string name="europe_countries_quiz">Name all European Countries</string>
    <string name="settings_text">Settings</string>
    <string name="theme_default">Default</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_blue">Blue</string>
    <string name="asia_countries_quiz">Name all Asian Countries</string>
    <string name="north_america_countries_quiz">Name all North American Countries</string>
    <string name="south_america_countries_quiz">Name all South American Countries</string>
    <string name="africa_countries_quiz">Name all African Countries</string>
    <string name="oceania_countries_quiz">Name all Oceanian Countries</string>
    <string-array name="themes">
        <item>@string/theme_default</item>
        <item>AMOLED</item>
        <item>@string/theme_dark</item>
        <item>@string/theme_blue</item>
    </string-array>
    <string name="theme_spinner_text">Theme</string>
    <string name="old_map">This is a map from before 2014!</string>
    <string name="reset_btn">Reset Progress</string>
    <string name="reset_alert_msg">This action cannot be undone!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="world_countries_quiz">Name all Countries in the World</string>
    <string name="reset_all_progress">Reset all Progress</string>
</resources>